--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@reduxjs/toolkit": "^2.8.2",
     "@sentry/nextjs": "^9.19.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.0",
@@ -86,6 +87,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.5.2",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
     "react-responsive": "^10.0.0",
     "recharts": "^2.15.1",
