improve some feature fetch

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
