--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.476.0",
     "match-sorter": "^8.0.0",
+    "mime-types": "^3.0.1",
     "mongoose": "^8.15.2",
     "motion": "^11.17.0",
     "next": "15.3.2",
@@ -107,6 +108,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
+    "@types/mime-types": "^3.0.1",
     "@types/node": "22.10.2",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
