fix: downgrade css-tree

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "csso": "4.2.0",
     "date-fns": "^4.1.0",
     "eslint": "8.48.0",
     "eslint-config-next": "15.1.0",
@@ -99,7 +100,7 @@
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
     "sort-by": "^1.2.0",
-    "svgo": "^4.0.0",
+    "svgo": "2.8.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
